# PromptsManager

./: .gitignore  README.md  TODO.md  findings.md  package-lock.json  package.json  pnpm-lock.yaml  progress.md  task_plan.md
.cursor/plans/: ai_prompt管理器开发计划_efa853b8.plan.md
.cursor/skills/draw-architecture/: SKILL.md
.cursor/skills/draw-module-deps/: SKILL.md
.github/workflows/: deploy.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/extension/: README.md  manifest.json  options.html  package.json  sidepanel.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/extension/note/: arch.mmd  dir.md  module.mmd
apps/extension/src/: App.tsx  background.ts  browser.ts  contextMenus.ts  debugLog.ts  extension.d.ts  insertPrompt.ts  manifest.ts  store.ts  (+11 more)
apps/flutter/: README.md  pubspec.yaml
apps/ide-extension/: .env.example  .vscodeignore  README.md  package.json  tsconfig.json
apps/landing/: .env.example  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  wrangler.toml
apps/miniprogram/: README.md  app.json  app.ts  app.wxss  package.json  project.config.json  project.private.config.example.json  tsconfig.json
apps/mobile/: README.md  capacitor.config.ts  package.json
apps/web/: .env.example  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
note/: arch.mmd  dir.md  module.mmd
supabase/: schema.sql
supabase/.temp/: linked-project.json
(+101 files in other folders)
