[package]
name = "prompt-manager-desktop"
version = "1.0.0"
description = "Prompt Manager - AI提示词管理器桌面端"
authors = ["Prompt Manager"]
edition = "2021"

[lib]
name = "prompt_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
